css/main.css
html {
    width: 100%;
    height: 100%;
}

body {
    width: 100%;
    height: 100%;
    font-family: "Arial Narrow",Arial,Helvetica,sans-serif;
    color: #000;
    background-color: #fff;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 20px 0 20px;
    font-family: "Arial Narrow",Arial,Helvetica,sans-serif;
    letter-spacing: 1px;
}

.subtitle-text {
    display: none;
}

@media(min-width:991px) {
    .subtitle-text {
        display: block;
    }
}

p {
    margin: 0 0 25px;
    font-size: 14px;
    line-height: 1.5;
    text-align: left;
}

@media(min-width:767px) {
    p {
        margin: 0 0 35px;
        font-size: 18px;
        line-height: 1.6;
    }
}

a {
    color: #fff;
    -webkit-transition: all 0s ease-in-out;
    -moz-transition: all 0s ease-in-out;
    transition: all 0s ease-in-out;
}

a:hover,
a:focus {
    text-decoration: underline;
}

.header-link {
    color: #fff;
}

.footer-link {
    color: #747474;
}

.light {
    font-weight: 400;
}

.intro, .bcg {
    display: table;
    width: 100%;
    height: auto;
    text-align: center;
    padding: 20px 0px 45px 0px;
    color: #fff;
    background: url(../img/title-bg.jpg) no-repeat bottom center scroll;
    background-color: #fff;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

.intro .intro-body {
    display: table-cell;
    vertical-align: middle;
}

.intro .intro-body .brand-heading {
    font-size: 40px;
    text-shadow: 1px 1px 1px #747474;
}

.intro .intro-body .intro-text {
    font-size: 24px;
    text-shadow: 1px 1px 1px #747474;
    text-align: center;
}

@media(min-width:767px) {
    .intro, .bcg {
        width: 100%;
        height: auto;
    }

    .intro .intro-body .brand-heading {
        font-size: 60px;
        margin-top: 40px;
    }

    .intro .intro-body .intro-text {
        font-size: 30px;
    }

    .content-section {
        padding-top: 20px;
    }

    .supporter {
        display: block;
        padding: 0px 40px 0px 40px;
    }
}

.content-section {
    padding: 20px 30px 20px 30px;
}   

.module-icon {
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding: 10px 30px 30px 30px;
}

@media(min-width: @screen-lg-min) {
    .intro {
        padding-top: 60px;
    }
}

footer {
    padding-top: 20px;
    padding-bottom: 20px;
    text-size: 16px;
    background-color: #eee;
}

footer p {
    margin: 0;
}

::-moz-selection {
    text-shadow: none;
    background: rgba(0,100,255,0.2);
}

::selection {
    text-shadow: none;
    background: rgba(0,100,255,0.2);
}

img::selection {
    background: 0 0;
}

img::-moz-selection {
    background: 0 0;
}

body {
    webkit-tap-highlight-color: rgba(255,255,255,.2);
}

.title-background {
    background-color: rgba(200,200,200,0.4);
    margin: 0px 0px 20px 0px;
}

.language-menu {
    margin: 10px 0px;
}

.flag {
    align:right;
    padding: 0px;
    margin: 0px 0px 0px 0px;


.navbar-custom {
    margin-bottom: 0;
    border-bottom: 1px solid rgba(255,255,255,.3);
    text-transform: uppercase;
    font-family: "Arial Narrow",Arial,Helvetica,sans-serif;
    background-color: #000;
}

.navbar-custom .navbar-brand {
    font-weight: 700;
}

.navbar-custom .navbar-brand:focus {
    outline: 0;
}

.navbar-custom .navbar-brand .navbar-toggle {
    padding: 4px 6px;
    font-size: 16px;
    color: #fff;
}

.navbar-custom .navbar-brand .navbar-toggle:focus,
.navbar-custom .navbar-brand .navbar-toggle:active {
    outline: 0;
}

.navbar-custom a {
    color: #fff;
}

.navbar-custom .nav li.active {
    outline: none;
    background-color: rgba(255,255,255,.3);
}

.navbar-custom .nav li a {
    -webkit-transition: background .3s ease-in-out;
    -moz-transition: background .3s ease-in-out;
    transition: background .3s ease-in-out;
}

.navbar-custom .nav li a:hover,
.navbar-custom .nav li a:focus,
.navbar-custom .nav li a.active {
    outline: 0;
    background-color: rgba(255,255,255,.3);
}

@media(min-width:767px) {
    .navbar {
        padding: 20px 0;
        border-bottom: 0;
        letter-spacing: 1px;
        background: 0 0;
        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
        transition: background .5s ease-in-out,padding .5s ease-in-out;
    }

    .top-nav-collapse {
        padding: 0;
        background-color: #000;
    }

    .navbar-custom.top-nav-collapse {
        border-bottom: 1px solid rgba(255,255,255,.3);
    }
}

.btn {
    text-transform: uppercase;
    font-family: "Arial Narrow",Arial,Helvetica,sans-serif;
    font-weight: 400;
    -webkit-transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
}

.btn-default {
    border: 1px solid #219ab3;
    color: #219ab3;
    background-color: transparent;
}

.btn-default:hover,
.btn-default:focus {
    border: 1px solid #219ab3;
    outline: 0;
    color: #000;
    background-color: #219ab3;
}

.btn-circle {
    width: 70px;
    height: 70px;
    margin-top: 15px;
    padding: 7px 16px;
    border: 2px solid #fff;
    border-radius: 35px;
    font-size: 40px;
    color: #fff;
    background: 0 0;
    -webkit-transition: background .3s ease-in-out;
    -moz-transition: background .3s ease-in-out;
    transition: background .3s ease-in-out;
}

.btn-circle:hover,
.btn-circle:focus {
    outline: 0;
    color: #fff;
    background: rgba(255,255,255,.1);
}

.btn-circle i.animated {
    -webkit-transition-property: -webkit-transform;
    -webkit-transition-duration: 1s;
    -moz-transition-property: -moz-transform;
    -moz-transition-duration: 1s;
}

.btn-circle:hover i.animated {
    -webkit-animation-name: pulse;
    -moz-animation-name: pulse;
    -webkit-animation-duration: 1.5s;
    -moz-animation-duration: 1.5s;
    -webkit-animation-iteration-count: infinite;
    -moz-animation-iteration-count: infinite;
    -webkit-animation-timing-function: linear;
    -moz-animation-timing-function: linear;
}

@-webkit-keyframes pulse {    
    0 {
        -webkit-transform: scale(1);
        transform: scale(1);
    }

    50% {
        -webkit-transform: scale(1.2);
        transform: scale(1.2);
    }

    100% {
        -webkit-transform: scale(1);
        transform: scale(1);
    }
}

@-moz-keyframes pulse {    
    0 {
        -moz-transform: scale(1);
        transform: scale(1);
    }

    50% {
        -moz-transform: scale(1.2);
        transform: scale(1.2);
    }

    100% {
        -moz-transform: scale(1);
        transform: scale(1);
    }
}

